testdata/baselines/reference/submodule/conformance/nodeModulesAllowJsExportAssignment(module=node20).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node20'.
index.js(3,1): error TS8003: 'export =' can only be used in TypeScript files.
subfolder/index.js(3,1): error TS8003: 'export =' can only be used in TypeScript files.


!!! error TS5109: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node20'.
==== subfolder/index.js (1 errors) ====
    // cjs format file
    const a = {};
    export = a;
    ~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.
==== subfolder/file.js (0 errors) ====
    // cjs format file
    const a = {};
    module.exports = a;
==== index.js (1 errors) ====
    // esm format file
    const a = {};
    export = a;
    ~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.
==== file.js (0 errors) ====
    // esm format file
    import "fs";
    const a = {};
    module.exports = a;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }